@@ -16,7 +16,7 @@ public class CSV {
     public static List<List<String>> list(String resourceName, String regex) {
         return stream(resourceName, regex)
                 .map(stream -> stream.collect(Collectors.toList()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<String> flatList(String resourceName) {
@@ -26,7 +26,7 @@ public class CSV {
     public static List<String> flatList(String resourceName, String regex) {
         return stream(resourceName, regex)
                 .flatMap(stream -> stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static <T> List<List<T>> list(String resourceName, Function<String,T> mapper) {
@@ -36,7 +36,7 @@ public class CSV {
     public static <T> List<List<T>> list(String resourceName, String regex, Function<String,T> mapper) {
         return stream(resourceName, regex)
                 .map(stream -> stream.map(mapper).collect(Collectors.toList()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static <T> List<T> flatList(String resourceName, Function<String,T> mapper) {
@@ -46,7 +46,7 @@ public class CSV {
     public static <T> List<T> flatList(String resourceName, String regex, Function<String,T> mapper) {
         return stream(resourceName, regex)
                 .flatMap(stream -> stream.map(mapper))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static Stream<Stream<String>> stream(String resourceName, String regex) {
